--- a/form.html
+++ b/form.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <h1>Reader Subscription Form</h1>
+
 <form class="subform"  method="post" action="submit.html">
 	<p>
 		<label for="name" class="label">What is your name?</label>
@@ -52,5 +53,7 @@
 		<input type="submit" value="Subscribe">
 	</p>
 </form>
+
 </body>
+<script src = "action.js"></script>
 </html>
