Change to Reg Expression

--- a/form.html
+++ b/form.html
@@ -50,7 +50,7 @@
 		<textarea name="comments" cols="35" rows="4" id="comments"></textarea>
 	</p>
 	<p>
-		<input type="submit" value="Subscribe">
+		<input type="submit" id = "submit" value="Subscribe">
 	</p>
 </form>
 
